--- a/aboutus.html
+++ b/aboutus.html
@@ -12,10 +12,16 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
     />
-    
+
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"/>
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <title>NuCamp: A Better Way To Camp</title>
   </head>
 
@@ -23,6 +29,9 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a href="index.html"><img src="img/img/logo.png" class="img-fluid"/></a>
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -31,37 +40,54 @@
       </div>
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-          <button
-            class="navbar-toggler ml-auto"
-            type="button"
-            data-toggle="collapse"
-            data-target="#nucampNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="nucampNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i>About</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
-              <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
-            </ul>
-          </div>
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="img/img/logo.png" height="30" width="30"/></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#nucampNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="nucampNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <i class="fa fa-home fa-lg"></i>
+                Home
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                <i class="fa fa-info fa-lg"></i>
+                About
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa fa-list fa-lg"></i>
+                Sites
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">
+                <i class="fa fa-address-card fa-lg"></i>
+                Contact
+              </a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <div class="container">
       <div class="row">
         <div class="col">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active">About Us</li>
-            </ol>
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item active">About Us</li>
+          </ol>
           <h2>About Us</h2>
           <hr />
         </div>
@@ -80,7 +106,36 @@
             reviews on campsites they have visited with each other.
           </p>
         </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white">Facts at a Glance</h3>
+              <div class="card-body">
+            <dl class="row">
+              <dt class="col-6">Founded</dt>
+              <dd class="col-6">February 3, 2016</dd>
+              <dt class="col-6">No. of Campsites in 2019</dt>
+              <dd class="col-6">563</dd>
+              <dt class="col-6">No. of Reviews in 2019</dt>
+              <dd class="col-6">4388</dd>
+              <dt class="col-6">Employees</dt>
+              <dd class="col-6">42</dd>
+            </dl>
+          </div>
+        </div>
       </div>
+      <div class="col">
+        <div class="card bg-light mt-3">
+          <blockquote class="blockquote card-body">
+            <p class="mb-0">I will not follow where the path may laed, but I will go where there is no path, and I will leave a trail.</p>
+              <footer class="blockquote-footer">Muriel Strode,
+                <cite title="Source Title">"Wind-Wafted Wild Flowers" - 
+                  The Open Court, 1903
+                </cite>
+              </footer>
+          </blockquote>
+        </div>
+    </div>
+  </div>
 
       <div class="row row-content">
         <div class="col">
@@ -115,13 +170,49 @@
           </h4>
           <p class="d-none d-sm-block">
             From polar fleeces to swimsuits, hiking boots to waders, a visit to
-            Node will be sure to get you covered.
-          </p>
+            Node will be sure to get you covered.</p>
         </div>
       </div>
-    </div>
+      <div class="row row-content">
+        <div class="col-sm-9">
+          <h2>Facts &amp Figures</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead>
+                <tr class="bg-primary text-light">
+                  <th></th>
+                  <th>2016</th>
+                  <th>2017</th>
+                  <th>2018</th>
+                </tr>
+              </thead>
+              <tbody class="table-primary">
+                <tr>
+                  <th>Staff Wilderness Experts</th>
+                  <td>10</td>
+                  <td>20</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <th>New Campers</th>
+                  <td>256</td>
+                  <td>1,280</td>
+                  <td>5,360</td>
+                </tr>
+                <tr>
+                <th>Square Miles Covered</th>
+                <td>101,325</td>
+                <td>423,000</td>
+                <td>~3,000,000,000</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    
 
-    <footer>
+    <footer class="site-footer">
       <div class="container">
         <div class="row">
           <div class="col-4 col-sm-2 offset-1">
@@ -135,15 +226,49 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i>Instagram</a>
-            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i>Facebook</a>
-            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i>Twitter</a>
-            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i>YouTube</a>
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="http://instagram.com/"
+            >
+              <i class="fa fa-instagram"></i>
+              Instagram
+            </a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="http://facebook.com/"
+            >
+              <i class="fa fa-facebook"></i>
+              Facebook
+            </a>
+            <a
+              class="btn btn-social-icon btn-twitter"
+              href="http://twitter.com/"
+            >
+              <i class="fa fa-twitter"></i>
+              Twitter
+            </a>
+            <a
+              class="btn btn-social-icon btn-google"
+              href="http://youtube.com/"
+            >
+              <i class="fa fa-youtube"></i>
+              YouTube
+            </a>
           </div>
           <div class="col-sm-4 text-center">
-            <a role="button" class="btn btn-link" href="tel:12605551234"><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a>
+            <a role="button" class="btn btn-link" href="tel:12605551234">
+              <i class="fa fa-phone fa-lg text-primary"></i>
+              1-206-555-1234
+            </a>
             <br />
-            <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope fa-lg text-primary"></i>campsites@nucamp.co</a>
+            <a
+              role="button"
+              class="btn btn-link"
+              href="mailto:campsites@nucamp.co"
+            >
+              <i class="fa fa-envelope fa-lg text-primary"></i>
+              campsites@nucamp.co
+            </a>
           </div>
         </div>
       </div>
